# r2-gallery

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  README_EN.md  docker-compose.yml  tailwind.css
assets/: main.css  tailwind.css
src/: components.rs  config.rs  error.rs  main.rs  models.rs  server.rs  state.rs  utils.rs  views.rs
src/components/: auth_guard.rs  dialog_component.rs  image_gallery.rs  inline_svg.rs
src/server/: auth.rs  handlers.rs  middleware.rs  route.rs
src/server/handlers/: login.rs  upload.rs  verify.rs
src/server/middleware/: auth.rs  cookie_cleanup.rs
src/views/: app.rs  home.rs  login.rs  not_found.rs  upload.rs
