[package]
name = "r2-gallery"
version = "0.1.0"
authors = ["krteke"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.0", features = ["router", "fullstack"] }
axum = { version = "0.8.6", optional = true }
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
], optional = true }
dotenvy = { version = "0.15.7", optional = true }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
reqwest = { version = "0.12.24", features = ["json"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", optional = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
rpassword = { version = "7.4.0", optional = true }
jsonwebtoken = { version = "10.1.0", features = [
    "rust_crypto",
], optional = true }
secrecy = { version = "0.10.3", features = ["serde"], optional = true }
axum-extra = { version = "0.12.1", optional = true, features = ["cookie"] }
argon2 = { version = "0.5.3", features = [
    "password-hash",
    "std",
], optional = true }
anyhow = { version = "1.0.100", optional = true }
subtle = { version = "2.6.1", optional = true }
chrono = { version = "0.4.42", optional = true }
time = { version = "0.3.44", optional = true }
aws-config = { version = "1.8.10", features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-s3 = { version = "1.110.0", optional = true }
uuid = { version = "1.18.1", features = ["v4", "js"] }
futures = { version = "0.3.31" }
web-sys = { version = "0.3.82", features = [
    "Window",
    "Location",
    "HtmlInputElement",
    "File",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:dotenvy",
    "dep:tracing-subscriber",
    "dep:jsonwebtoken",
    "dep:secrecy",
    "dep:axum-extra",
    "dep:argon2",
    "dep:anyhow",
    "dep:subtle",
    "dep:chrono",
    "dep:time",
    "dep:aws-sdk-s3",
    "dep:aws-config",
]
build-tools = ["dep:argon2", "dep:rpassword"]
